--- a/al_yaqeen/ui/templates/ui/articles/id.html
+++ b/al_yaqeen/ui/templates/ui/articles/id.html
@@ -5,7 +5,14 @@
 
 <!---->
 {% block content %}
-<div class="grid w-full grid-cols-12 gap-8">
+<div id="notification" class="toast toast-top toast-end top-24 z-10 hidden">
+  <div role="alert" class="alert alert-success">
+    <i data-lucide="circle-check" class="size-4 lg:size-6"></i>
+    <span class="content">{% trans 'Copied' %}</span>
+  </div>
+</div>
+
+<div class="relative grid w-full grid-cols-12 gap-8">
   <section
     id="article-options"
     class="col-span-12 lg:col-span-8 lg:col-start-4 lg:col-end-10"
@@ -30,6 +37,7 @@
           data-tip="{% trans 'Breaking' %}"
         >
           <a
+            href="{% url 'ui:articles' %}?is_breaking=True"
             class="join-item badge badge-soft badge-error w-full animate-pulse lg:badge-lg"
           >
             {% trans 'Breaking' %}
@@ -53,20 +61,26 @@
       </div>
 
       <div class="join divide-base-100 items-center divide-x-2">
-        <div
-          class="tooltip tooltip-bottom tooltip-error"
+        <form 
+          method="post"
           data-tip="{% trans 'Save' %}"
+          class="tooltip tooltip-bottom tooltip-error"
+          action="/api/articles/{{ article.id }}/save?redirect=1"
         >
-          <button class="btn join-item btn-square btn-soft btn-error">
-            <i data-lucide="heart" class="size-4 lg:size-6"></i>
+          {% csrf_token %}
+          <button type="submit" class="btn join-item btn-square btn-soft btn-error">
+            <i data-lucide="bookmark" class="size-4 lg:size-6"></i>
             <span class="sr-only">{% trans 'Save' %}</span>
           </button>
-        </div>
+        </form>
         <div
           class="tooltip tooltip-bottom tooltip-success"
           data-tip="{% trans 'Copy Link' %}"
         >
-          <button class="btn join-item btn-square btn-soft btn-success">
+          <button
+            data-clipboard-text="{{ request.build_absolute_uri }}"
+            class="btn btn-copy join-item btn-square btn-soft btn-success"
+          >
             <i data-lucide="link-2" class="size-4 lg:size-6"></i>
             <span class="sr-only">{% trans 'Copy Link' %}</span>
           </button>
@@ -75,12 +89,34 @@
           class="tooltip tooltip-bottom tooltip-info"
           data-tip="{% trans 'Share' %}"
         >
-          <button class="btn join-item btn-square btn-soft btn-info">
-            <i data-lucide="share-2" class="size-4 lg:size-6"></i>
-            <span class="sr-only">{% trans 'Share' %}</span>
-          </button>
+          <div class="dropdown dropdown-left dropdown-bottom">
+            <button tabindex="0" class="btn join-item btn-square btn-soft btn-info">
+              <i data-lucide="share-2" class="size-4 lg:size-6"></i>
+              <span class="sr-only">{% trans 'Share' %}</span>
+            </button>
+            <ul tabindex="0" class="dropdown-content menu gap-4 bg-base-100 rounded-box shadow-sm">
+              <li>
+                <a 
+                  href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}"
+                  class="btn btn-ghost btn-sm justify-start gap-4 lg:btn-md"
+                >
+                  <i data-lucide="facebook" class="size-4 lg:size-6"></i>
+                  {% trans 'Facebook' %}
+                </a>
+              </li>
+              <li>
+                <a 
+                  href="https://twitter.com/intent/tweet?url={{ request.build_absolute_uri }}&text={{ article.title }}"
+                  class="btn btn-ghost btn-sm justify-start gap-4 lg:btn-md"
+                >
+                  <i data-lucide="twitter" class="size-4 lg:size-6"></i>
+                  {% trans 'X' %}
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div
+        <!-- <div
           class="tooltip tooltip-bottom tooltip-primary"
           data-tip="{% trans 'Options' %}"
         >
@@ -88,7 +124,7 @@
             <i data-lucide="ellipsis-vertical" class="size-4 lg:size-6"></i>
             <span class="sr-only">{% trans 'Options' %}</span>
           </button>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -141,4 +177,23 @@
     </div>
   </section>
 </div>
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js"></script>
+
+<script>
+  const clipboard = new ClipboardJS(".btn-copy");
+
+  clipboard.on("success", (e) => {
+    const not = document.getElementById("notification");
+
+    // Show notification
+    not.classList.toggle("hidden");
+
+    // Hide notification after 2s
+    setTimeout(() => {
+      not.classList.toggle("hidden");
+    }, 2000);
+  });
+</script>
 {% endblock %}
