--- a/al_yaqeen/ui/templates/ui/categories/id.html
+++ b/al_yaqeen/ui/templates/ui/categories/id.html
@@ -20,54 +20,9 @@
     {% for article in category.get_children.specific %}
     <div
       id="{{ article.slug }}"
-      class="col-span-12 md:col-span-6 lg:col-span-4 xl:col-span-3"
+      class="col-span-12 md:col-span-6 lg:col-span-4"
     >
-      <div
-        class="hover:border-success active:border-primary size-full w-full border border-transparent"
-      >
-        <article
-          class="card bg-base-200 lg:card-lg xl:card-xl relative size-full rounded-none"
-        >
-          <figure>{% image article.image scale-100 %}</figure>
-          <main class="gird card-body gap-4 lg:gap-6">
-            <h1 class="card-title text-primary rtl:font-kufi font-serif">
-              {{ article.title }}
-            </h1>
-
-            <p>{{ article.headline }}</p>
-
-            <div class="flex items-center justify-between">
-              <div
-                class="tooltip tooltip-right rtl:tooltip-left tooltip-info"
-                data-tip="{% trans 'Date published' %}"
-              >
-                <time
-                  class="badge badge-soft badge-info"
-                  datetime="{{ article.created_at|date }}"
-                >
-                  {{ article.created_at|date }}
-                </time>
-              </div>
-
-              <div
-                class="tooltip tooltip-right rtl:tooltip-left tooltip-info"
-                data-tip="{% trans 'Category' %}"
-              >
-                <a
-                  href="{% url 'ui:category' category.slug %}"
-                  class="badge badge-soft badge-primary"
-                >
-                  <span>{{ category.title }}</span>
-                  <i
-                    data-lucide="chevron-right"
-                    class="size-4 lg:size-6 rtl:rotate-180"
-                  ></i>
-                </a>
-              </div>
-            </div>
-          </main>
-        </article>
-      </div>
+      {% include 'ui/components/article.html' %}
     </div>
     {% endfor %}
   </div>
