--- a/al_yaqeen/ui/templates/ui/components/messages.html
+++ b/al_yaqeen/ui/templates/ui/components/messages.html
@@ -1,16 +1,12 @@
 {% if messages %}
-<ol class="list">
-  {% for message in messages %}
-  <li class="list-row alert alert-{{ message.tags }}">
-    <div>
-      <span class="badge badge-soft badge-{{ message.tags }} font-semibold">
-        {{ message.tags|upper }}
-      </span>
-    </div>
-    <div>
+<div class="toast toast-top toast-end top-24 right-8 z-10">
+  <ol class="gird gap-4 max-w-2xl mx-auto">
+    {% for message in messages %}
+    <li class="alert alert-{{ message.tags }}">
+      <i data-lucide="circle-check" class="size-4 lg:size-6"></i>
       <p>{{ message }}</p>
-    </div>
-  </li>
-  {% endfor %}
-</ol>
+    </li>
+    {% endfor %}
+  </ol>
+</div>
 {% endif %}
