--- a/al_yaqeen/ui/templates/ui/index.html
+++ b/al_yaqeen/ui/templates/ui/index.html
@@ -56,12 +56,12 @@
               >
                 <a
                   href="{% url 'ui:articles' %}?is_breaking=True"
-                  class="relative join-item badge badge-error lg:badge-lg"
+                  class="relative join-item badge badge-sm badge-error lg:badge-lg"
                 >
                   <i data-lucide="podcast" class="size-4 lg:size-6"></i>
 
                   <span
-                    class="absolute badge aspect-square animate-ping rounded-full badge-xl badge-error"
+                    class="absolute badge badge-sm aspect-square animate-ping rounded-full badge-xl badge-error"
                   ></span>
                   <span class="sr-only">{% trans 'Breaking' %}</span>
                 </a>
@@ -73,14 +73,9 @@
               >
                 <a
                   href="{% url 'ui:category' article.get_parent.slug %}"
-                  class="join-item badge badge-primary text-shadow-lg lg:badge-lg"
+                  class="join-item badge badge-sm badge-primary text-shadow-lg lg:badge-lg"
                 >
-                  <span>{{ article.get_parent.title }}</span>
-
-                  <i
-                    data-lucide="chevron-right"
-                    class="size-4 lg:size-6 rtl:rotate-180"
-                  ></i>
+                  {{ article.get_parent.title }}
                 </a>
               </div>
             </div>
@@ -154,18 +149,21 @@
     </div>
   </div>
 
-  <div class="carousel rounded-box">
+  <div class="carousel">
     {% for article in latest_news %}
     <div
       id="{{ article.slug }}"
-      class="join-vertical carousel-item join w-full border border-transparent hover:border-success active:border-primary md:w-1/2 lg:w-1/3"
+      class="carousel-item w-full md:w-1/2 lg:w-1/3"
     >
       <article
-        class="group card relative join-item size-full rounded-none bg-base-200 p-4 hover:bg-primary hover:text-primary-content hover:shadow active:bg-success active:text-success-content lg:card-lg xl:card-xl"
+        class="card relative size-full bg-base-200 p-4 hover:shadow lg:card-lg xl:card-xl"
       >
+        <figure class="rounded-box overflow-hidden">
+          {% image article.image scale-100 %}
+        </figure>
         <main class="card-body gap-4 lg:gap-8">
           <h1
-            class="card-title font-serif text-primary group-hover:text-primary-content rtl:font-kufi"
+            class="card-title font-serif text-primary rtl:font-kufi"
           >
             {{ article.title }}
           </h1>
@@ -173,32 +171,27 @@
           <p>{{ article.headline }}</p>
 
           <div class="flex items-center justify-between">
-            <span class="badge badge-soft badge-primary">
+            <time class="badge badge-sm badge-info lg:badge-lg" datetime="{{ article.created_at }}">
               {{ article.created_at|timesince }}
-            </span>
-            <a
-              href="{% url 'ui:category' article.get_parent.slug %}"
-              class="badge badge-soft badge-primary"
-            >
-              <span>{{ article.get_parent.title }}</span>
-
-              <i
-                data-lucide="chevron-right"
-                class="size-4 lg:size-6 rtl:rotate-180"
-              ></i>
-            </a>
+            </time>
+            <div class="tooltip tooltip-primary tooltip-top" data-tip="{% trans 'Category' %}">
+              <a
+                href="{% url 'ui:category' article.get_parent.slug %}"
+                class="badge badge-sm badge-primary lg:badge-lg"
+              >
+                {{ article.get_parent.title }}
+              </a>
+            </div>
           </div>
+          <a href="{% url 'ui:article' article.slug %}" class="btn btn-primary btn-lg xl:btn-xl">
+            {% trans 'Continue reading' %}
+            <i
+              data-lucide="chevron-right"
+              class="size-4 lg:size-6 rtl:rotate-180"
+            ></i>
+          </a>
         </main>
       </article>
-
-      <a
-        href="{% url 'ui:article' article.slug %}"
-        class="btn join-item btn-primary group-hover:btn-success"
-      >
-        {% trans 'Continue reading' %}
-      </a>
-
-      <figure class="join-item">{% image article.image scale-100 %}</figure>
     </div>
     {% endfor %}
   </div>
@@ -228,21 +221,21 @@
     </div>
   </div>
 
-  <div class="carousel rounded-box">
+  <div class="carousel">
     {% for category in categories %}
     <div
       id="{{ category.slug }}"
       class="carousel-item w-full md:w-1/2 lg:w-1/3"
     >
       <article
-        class="card relative size-full rounded-none bg-base-200 p-4 hover:bg-base-100 lg:card-lg xl:card-xl"
+        class="card relative size-full bg-base-200 p-4 hover:shadow lg:card-lg xl:card-xl"
       >
         <main class="card-body gap-4 lg:gap-8">
           <div
             class="tooltip tooltip-left tooltip-info absolute top-4 right-4 rtl:left-4"
             data-tip="{% trans 'Article count' %}"
           >
-            <span class="badge badge-soft badge-info">
+            <span class="badge badge-sm badge-soft badge-info lg:badge-lg">
               {{ category.get_children.count }} {% trans 'articles' %}
             </span>
           </div>
@@ -255,9 +248,13 @@
 
           <a
             href="{% url 'ui:category' category.slug %}"
-            class="btn btn-primary"
+            class="btn btn-primary btn-lg xl:btn-xl"
           >
-            {% trans 'View all' %}
+            {% trans 'See all' %}
+            <i
+              data-lucide="chevron-right"
+              class="size-4 lg:size-6 rtl:rotate-180"
+            ></i>
           </a>
         </main>
       </article>
