--- a/al_yaqeen/ui/templates/ui/about.html
+++ b/al_yaqeen/ui/templates/ui/about.html
@@ -6,8 +6,8 @@
 <!---->
 {% block content %}
 <section class="container mx-auto px-4">
-  <div class="prose prose-neutral prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-headings:font-serif rtl:prose-headings:font-kufi prose-img:rounded-box max-w-none">
-    
-  </div>
+  <div
+    class="prose prose-neutral prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-headings:font-serif rtl:prose-headings:font-kufi prose-img:rounded-box max-w-none"
+  ></div>
 </section>
 {% endblock %}
