--- a/al_yaqeen/ui/templates/ui/base.html
+++ b/al_yaqeen/ui/templates/ui/base.html
@@ -10,28 +10,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %}</title>
-    <meta name="description"
-      content="OpenGraph.Dev: Generate and preview Open Graph meta tags for images, titles, and more, ensuring optimal display on Facebook, Twitter, LinkedIn, WhatsApp...">
-    
+    <meta
+      name="description"
+      content="OpenGraph.Dev: Generate and preview Open Graph meta tags for images, titles, and more, ensuring optimal display on Facebook, Twitter, LinkedIn, WhatsApp..."
+    />
+
     <!-- Open Graph Meta Tags -->
-    <meta property="og:url" content="https://opengraph.dev">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="OpenGraph - Preview Images and Generate Open Graph Meta Tags">
-    <meta property="og:description"
-      content="OpenGraph.Dev: Generate and preview Open Graph meta tags for images, titles, and more, ensuring optimal display on Facebook, Twitter, LinkedIn, WhatsApp...">
-    <meta property="og:image" content="https://opengraph.dev/banner.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    
+    <meta property="og:url" content="https://opengraph.dev" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="OpenGraph - Preview Images and Generate Open Graph Meta Tags"
+    />
+    <meta
+      property="og:description"
+      content="OpenGraph.Dev: Generate and preview Open Graph meta tags for images, titles, and more, ensuring optimal display on Facebook, Twitter, LinkedIn, WhatsApp..."
+    />
+    <meta property="og:image" content="https://opengraph.dev/banner.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
     <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="opengraph.dev">
-    <meta property="twitter:url" content="https://opengraph.dev">
-    <meta name="twitter:title" content="OpenGraph - Preview Images and Generate Open Graph Meta Tags">
-    <meta name="twitter:description"
-      content="OpenGraph.Dev: Generate and preview Open Graph meta tags for images, titles, and more, ensuring optimal display on Facebook, Twitter, LinkedIn, WhatsApp...">
-    <meta name="twitter:image" content="https://opengraph.dev/banner.png">
-    
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="opengraph.dev" />
+    <meta property="twitter:url" content="https://opengraph.dev" />
+    <meta
+      name="twitter:title"
+      content="OpenGraph - Preview Images and Generate Open Graph Meta Tags"
+    />
+    <meta
+      name="twitter:description"
+      content="OpenGraph.Dev: Generate and preview Open Graph meta tags for images, titles, and more, ensuring optimal display on Facebook, Twitter, LinkedIn, WhatsApp..."
+    />
+    <meta name="twitter:image" content="https://opengraph.dev/banner.png" />
+
     <!-- Meta Tags Generated via https://opengraph.dev -->
     <link
       href="{% static 'ui/css/styles.css' %}"
@@ -269,7 +281,10 @@
                     href="{% url 'ui:signup' %}"
                     class="btn join-item btn-square btn-soft btn-sm btn-success lg:btn-md"
                   >
-                    <i data-lucide="heart-handshake" class="size-4 lg:size-6"></i>
+                    <i
+                      data-lucide="heart-handshake"
+                      class="size-4 lg:size-6"
+                    ></i>
                     <span class="sr-only">{% trans 'Subscribe' %}</span>
                   </a>
                 </div>
@@ -323,13 +338,19 @@
             >
               <nav>
                 <h6 class="footer-title">{% trans 'Services' %}</h6>
-                <a href="{% url 'ui:articles' %}" class="link link-hover">{% trans 'News' %}</a>
+                <a href="{% url 'ui:articles' %}" class="link link-hover"
+                  >{% trans 'News' %}</a
+                >
                 <a class="link link-hover">{% trans 'Advertisement' %}</a>
               </nav>
               <nav>
                 <h6 class="footer-title">{% trans 'Company' %}</h6>
-                <a href="{% url 'ui:about' %}" class="link link-hover">{% trans 'About us' %}</a>
-                <a href="{% url 'ui:contact' %}" class="link link-hover">{% trans 'Contact' %}</a>
+                <a href="{% url 'ui:about' %}" class="link link-hover"
+                  >{% trans 'About us' %}</a
+                >
+                <a href="{% url 'ui:contact' %}" class="link link-hover"
+                  >{% trans 'Contact' %}</a
+                >
               </nav>
               <nav>
                 <h6 class="footer-title">{% trans 'Legal' %}</h6>
