--- a/al_yaqeen/ui/templates/ui/categories/list.html
+++ b/al_yaqeen/ui/templates/ui/categories/list.html
@@ -16,14 +16,25 @@
 
   {% for category in category_list %}
   <section id="{{ category.slug }}" class="grid gap-4 lg:gap-8">
-    <div class="rounded-box border-primary flex items-center justify-between border-l-8 rtl:border-r-8 p-4">
+    <div
+      class="rounded-box border-primary flex items-center justify-between border-l-8 rtl:border-r-8 p-4"
+    >
       <h2 class="text-primary text-xl font-semibold lg:text-3xl">
         {{ category.title }}
       </h2>
 
-      <div class="tooltip tooltip-left rtl:tooltip-right tooltip-primary" data-tip="{% trans 'See All' %}">
-        <a href="{% url 'ui:category' category.slug %}" class="btn btn-circle btn-soft btn-primary lg:btn-lg">
-          <i data-lucide="chevron-right" class="size-4 lg:size-6 rtl:rotate-180"></i>
+      <div
+        class="tooltip tooltip-left rtl:tooltip-right tooltip-primary"
+        data-tip="{% trans 'See All' %}"
+      >
+        <a
+          href="{% url 'ui:category' category.slug %}"
+          class="btn btn-circle btn-soft btn-primary lg:btn-lg"
+        >
+          <i
+            data-lucide="chevron-right"
+            class="size-4 lg:size-6 rtl:rotate-180"
+          ></i>
           <span class="sr-only">{% trans 'See All' %}</span>
         </a>
       </div>
@@ -31,7 +42,10 @@
 
     <div class="carousel">
       {% for article in category.get_children.specific|slice:'0:6' %}
-      <div id="{{ article.slug }}" class="carousel-item w-full md:w-1/2 lg:w-1/3">
+      <div
+        id="{{ article.slug }}"
+        class="carousel-item w-full md:w-1/2 lg:w-1/3"
+      >
         {% include 'ui/components/article.html' %}
       </div>
       {% endfor %}
